--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                 />
               </div>
 
+
+
+
               <div class="col-md-6">
                 <label for="validationDefault03" class="form-label">City</label>
                 <input
@@ -107,19 +110,14 @@
                 />
               </div>
 
-
-
-
-
-
               <div class="col-md-3">
                 <label for="validationDefault05" class="form-label">State</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="validationDefault05"
-                  required
-                />
+                <select class="form-select" aria-label="Default select example">
+                  <option selected>Pick a state</option>
+                  <option value="1">FL-Miami</option>
+                  <option value="2">NY</option>
+                  <option value="3">LA</option>
+                </select>
               </div>
 
               <div class="col-md-3">
@@ -133,20 +131,28 @@
               </div>
 
 
-              <div class="col-12">
-                <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    value=""
-                    id="invalidCheck2"
-                    required
-                  />
-                  <label class="form-check-label" for="invalidCheck2">
-                    Agree to terms and conditions
-                  </label>
+
+
+              <div class="col-6">
+
+
+
+              </div>
+
+              <div class="col-6">
+                <div class="mb-3">
+                  <label for="message-text" class="col-form-label">Message:</label>
+                  <textarea class="form-control" id="message-text"></textarea>
+                  <span style="font-size: 12px;">add any note here</span>
                 </div>
               </div>
+
+              
+
+
+
+              <br>
+              <br>
 
             </form>
           </div>
